Zavrsen proces dodavanja user-a/recezenta

--- a/NaucnaCentralaUI/src/app/app.component.html
+++ b/NaucnaCentralaUI/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light"> 
   
-  <a class="navbar-brand" [routerLink]="['/registrate']" >Registrate</a>  
+  <a class="navbar-brand" [routerLink]="['/register']" >Register</a>  
 </nav>
 <router-outlet></router-outlet>
